--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 3000
-GEOCODIJNE_API_KEY = AIzaSyDlDEO0VaOVszAVDcgkP9fJV2w0Sl-l6KM
+GEOCODING_API_KEY = AIzaSyDlDEO0VaOVszAVDcgkP9fJV2w0Sl-l6KM
 
 darksky = 51b7774cf1581ac8c3d71236a475a32d;
 
-eventbrite = KK2LW6EL5EAQBKTIP2ZS
+eventbrite = 4jvqzd2qxdTJD9W6
